--- a/frontend/src/Jobdetails.css
+++ b/frontend/src/Jobdetails.css
@@ -155,6 +155,7 @@ h2 {
   flex: 1;
   width: 100%;
   animation: fadeIn 0.3s ease-in-out;
+  /* margin-left: 2rem; */
 }
 
 @keyframes fadeIn {
@@ -379,6 +380,19 @@ h2 {
     padding: 1rem;
   }
 }
+
+/* -----------------------------------
+   8. Override focus styles on tabs
+----------------------------------- */
+.tab:focus,
+.tab:active,
+.tab:focus-visible {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none;
+}
+
+
 
 /* Tablet */
 @media (min-width: 641px) and (max-width: 1024px) {
