--- a/frontend/src/HomeStyles.css
+++ b/frontend/src/HomeStyles.css
@@ -405,14 +405,6 @@
     }
   }
 
-  .head-logo {
-    width: 120px;
-    height: auto;
-    margin-right: 8px;
-  }
-  
-
-
 .input-group {
   margin-bottom: 20px;
   width: 100%;
@@ -422,7 +414,8 @@
   display: block;
   margin-bottom: 8px;
   font-weight: 500;
-  color: #333;
+  /* color: #333; */
+  color : #133A59
 }
 
 .card-title {
@@ -466,8 +459,6 @@
   border-color: #4a90e2;
   box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
 }
-
-
 
 
 .job-input {
@@ -671,11 +662,11 @@ h3 {
   font-size: 1.5rem;
 }
 
-.input-group {
+/* .input-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 0.75rem;
-}
+} */
 
 label {
   margin-bottom: 0.25rem;
@@ -727,7 +718,7 @@ label {
 .input-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0.5rem; 
+  margin-bottom: 0.90rem; 
 }
 
 label {
@@ -807,8 +798,9 @@ label {
   color: #1d4ed8; 
 }
 .head-logo {
-  height: 40px; 
+  height: 50px; 
   width: auto;
+  margin-right: 8px;
 }
 .form-tip {
   margin-top: 8px;       
