--- a/frontend/src/HomeStyles.css
+++ b/frontend/src/HomeStyles.css
@@ -3,7 +3,15 @@
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", sans-serif;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
+    background: linear-gradient(
+  135deg,
+  #F8FCFF,
+  #F3F9FF,
+  #F9F3FF,
+  #FBF6FF,
+  #FFFFFF
+);
     color: #333;
     box-sizing: border-box;
   }
@@ -666,12 +674,6 @@ h3 {
   font-size: 1.5rem;
 }
 
-/* .input-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0.75rem;
-} */
-
 label {
   margin-bottom: 0.25rem;
   font-weight: 500;
@@ -808,9 +810,7 @@ label {
 }
 .form-tip {
   margin-top: 8px;       
-  /* color: #000000;          */
   font-family: "Segoe UI", sans-serif;
- /* color : #757575; */
   font-size: 9.40px;   
   font-weight: 500;    
   text-align: left;     
