--- a/frontend/src/Jobdetails.css
+++ b/frontend/src/Jobdetails.css
@@ -10,15 +10,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.6;
   color: #333;
-  /* background-color: #f5f7fa; */
-     background: linear-gradient(
-  135deg,
-  #F8FCFF,
-  #F3F9FF,
-  #F9F3FF,
-  #FBF6FF,
-  #FFFFFF
-);
+  background-color: #f5f7fa;
+   
   margin: 0;
   padding: 0;
   width: 100vw;
